fix: deploy auth change
